[gd_scene load_steps=2 format=3 uid="uid://84aagbio6xev"]

[ext_resource type="Script" uid="uid://baf2huppqyde7" path="res://horror_ui_ui_scenes/ui/HUD.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ObjectiveLabel" type="Label" parent="Root"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.5
anchor_bottom = 0.12
grow_horizontal = 0

[node name="InteractionContainer" type="HBoxContainer" parent="Root"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.85
anchor_right = 0.4
anchor_bottom = 0.95
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 6

[node name="InteractionDot" type="TextureRect" parent="Root/InteractionContainer"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2

[node name="VignetteOverlay" type="ColorRect" parent="Root"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)
